[package]
name = "immi"
version = "0.3.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
documentation = "http://tomaka.github.io/immi/immi/index.html"
repository = "https://github.com/tomaka/immi"
readme = "README.md"
license = "MIT"
description = "Immediate mode user interface toolkit."
keywords = ["ui", "gamedev", "user", "interface"]
