[package]
name = "immi"
version = "1.0.4"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
documentation = "https://docs.rs/crate/immi/1"
repository = "https://github.com/tomaka/immi"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Immediate mode user interface toolkit."
keywords = ["ui", "gamedev", "user", "interface"]
categories = ["gui"]
